attempt to fix white space issue, .contact not used now, TEST BY CANCELLING OUT OVERFLOW HIDDEN, and right bottom:0

--- a/css/style.css
+++ b/css/style.css
@@ -115,8 +115,6 @@ section.grey {
 
 #contact {
 padding-top: 8.5%;
-bottom: 0;
-right:0;
 margin: 0;
 border: 1px solid transparent;
 /*overflow: hidden;*/
